--- a/src/assets/cuestionario.css
+++ b/src/assets/cuestionario.css
@@ -3,27 +3,31 @@
 .seccion-cuestionario {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
   justify-content: space-evenly;
   background-color: #171b269a;
   color: #9fa6b7;
   padding: 40px;
   border-radius: 50px;
-  border: 1px white solid;
   width: 1000px;
   height: 600px;
+  gap: 1px;
 }
 
-/* .seccion-progreso {
-
-} */
-
-.seccion-preguntas {
+.seccion-preguntas{
   display: flex;
   flex-direction: column;
-  border: 1px white solid;
-  height: 400px;
-  padding-top: 30px;
+  /* border: 1px white solid; */
+  /* height: 400px; */
+  /* padding-top: 30px; */
+  padding-left: 50px;
+}
+
+.seccion-preguntas-hijas {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px white solid; */
+  /* height: 400px; */
+  /* padding-top: 30px; */
   padding-left: 50px;
 }
 
