--- a/src/assets/home_page.css
+++ b/src/assets/home_page.css
@@ -7,9 +7,9 @@ input {
 
 .background {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
   background-color: #171b26;
 }
@@ -23,6 +23,7 @@ input {
   color: #9fa6b7;
   padding: 40px;
   border-radius: 50px;
+  height: 600px;
 }
 
 .title-buttons {
