--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -317,6 +317,14 @@ input[type='button']:hover {
   border-color: #888;
   outline: 0;
 }
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #000000;
+  color: #666666;
+  cursor: no-drop;
+}
+
 .button.button-primary,
 button.button-primary,
 input[type='submit'].button-primary,
