--- a/src/assets/cuestionario.css
+++ b/src/assets/cuestionario.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
+
+.banner {
+  height: 5.5rem;
+  padding: 0rem 2rem 0rem;
+  background-color: rgb(87, 101, 255);
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  color: white;
+  width: 100%;
+}
+
+.banner Img {
+  position: relative;
+  height: 3rem;
+  width: auto;
+  margin-left: 2%;
+}
+
 .seccion-cuestionario {
   display: flex;
   flex-direction: column;
@@ -11,7 +31,7 @@
   width: 1000px;
   height: 900px;
   gap: 1px;
-  margin-top: 60px;
+  /* margin-top: 60px; */
 }
 
 .seccion-preguntas-respuestas {
